# template-blog-django

./: .coverage  .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_criar_grupo_escritores.py  0002_publicacao_visualizacoes.py  0003_categoria_publicacao_categoria.py  0003_publicacao_imagem_publicacao_subtitulo.py  0004_alter_publicacao_visualizacoes.py
blog/static/blog/: dropdown.js  estilo.css
blog/templates/: 400.html  403.html  404.html  500.html
blog/templates/blog/: base.html  detalhe_publicacao.html  pagina_inicial.html
blog/templatetags/: extras_markdown.py  markdown_extras.py  paginacao_extras.py
blog/tests/: test_admin.py  test_base.py  test_models.py  test_templatetags.py  test_views.py
config/: settings.py  urls.py
